--- a/style.css
+++ b/style.css
@@ -1,18 +1,25 @@
 #mainwords{
-    font-size: 10vw;
+    font-size: 15vw;
     font-family: "pain-de-mie", sans-serif;
     font-weight: 400;
     font-style: normal;
     color: white;
+    margin-top: 15vh;
 }
 
 #main {
-        background-image: url(/imgs/bgbeach2.gif);
-        background-size: cover;
-        height: 100vh;
-        padding:0;
-        margin:0;
+    background-image: url(/imgs/beachvid2.gif);
+    background-size: cover;
+    height: 100vh;
+    padding:0;
+    margin:0;
 }
 #logo {
     height: 5vh;
+}
+.body-bg {
+    background-image: linear-gradient(#040a3d, #320552);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
