--- a/style.css
+++ b/style.css
@@ -80,5 +80,7 @@ footer {
     font-family: "router", sans-serif;
     font-weight: 400;
     font-style: normal;
-    margin-bottom: 0px;
+    width: 100%;
+    margin: auto 0;
+    margin-bottom: 0;
 }
