i think the pics r good

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 #main {
-    background-image: url(/imgs/beachvid2.gif);
+    background-image: url(imgs/beachvid2.gif);
     background-size: cover;
     height: 100vh;
     padding:0;
